tests/baselines/reference/parserConstructorDeclaration10.errors.txt
parserConstructorDeclaration10.ts(2,18): error TS1093: Type annotation cannot appear on a constructor declaration.


==== parserConstructorDeclaration10.ts (1 errors) ====
    class C {
      constructor(): number { }
                     ~~~~~~
!!! error TS1093: Type annotation cannot appear on a constructor declaration.
    }